tests/ui/attributes/unix_sigpipe/unix_sigpipe-duplicates.without_feature.stderr
error: multiple `unix_sigpipe` attributes
  --> $DIR/unix_sigpipe-duplicates.rs:6:1
   |
LL | #[unix_sigpipe = "sig_dfl"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/unix_sigpipe-duplicates.rs:5:1
   |
LL | #[unix_sigpipe = "sig_dfl"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

